--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.26.1",
+    "react-scroll": "^1.9.0",
     "scroll-lock": "^2.1.5"
   },
   "devDependencies": {
